--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <h1>sfinder出力/テト譜保管庫</h1>
 	
 <h2><a href="newdtpcpc/ndpp.html">新DTパフェパフェ</a></h2>
+<h2><a href="uye/path_minimal.html">uyeshotaさんの</a></h2>
 </body>
 </html>
