--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 	
 <h2><a href="newdtpcpc/ndpp.html">新DTパフェパフェ</a></h2>
 <h2><a href="uye/path_minimal.html">uyeshotaさんの</a></h2>
+<h2><a href="gz/path_minimal.html">グッズさんより</a></h2>
 </body>
 </html>
